# nonebot

./: .env.prod  LICENSE  README.md  pyproject.toml
ffxiv_bot/plugins/ffxiv/: __init__.py  model.py  save.py  scrapper.py  visualize.py
save/: channels.pkl
